tests/parser-test-files/bad-files/parse-cond.4.error
error: Malformed function
  --> test:4:19
   |
 4 |  (define x (cond (y)))
   |                    ^ expected body
